@@ -1,3 +1,11 @@
+2017-03-20  Bruno Haible  <bruno@clisp.org>
+
+	Fix "End of comment outside comment" warnings from varbrace.
+	* utils/varbrace.c (enum parsing_state): New type.
+	(parsing_state_at_end_of_line): New function.
+	(next_token): Continue reading more lines for a preprocessor
+	line that ends within a C style comment.
+
 2017-03-20  Sam Steingold  <sds@gnu.org>
 
 	Fix non-blocking sockets on Mac OS X.
